# websocket_mq

./: Cargo.toml  README.md  copyto.bat  mk_target.bat  sync.bat  websocket.html
appconfig/: Cargo.toml
appconfig/src/: config.rs  lib.rs
asynclog/: Cargo.toml
asynclog/src/: lib.rs
src/: main.rs  mq.rs
