# cargo build --release --target=x86_64-unknown-linux-musl
[package]
name = "websocket_mq"
version = "0.9.0"
edition = "2021"
authors = ["kiven <kivensoft@gmail.com>"]
description = "Message queuing service base on websocket"
repository = "https://github.com/kivensoft/websocket_mq"
build = "build.rs"

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true
strip = true
codegen-units = 1
incremental = false
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0" # 最流行的错误处理库
log = "0.4" # 日志门面库，官方标准
tokio = { version = "1.27", features = ["full"] } # 最流行的异步io库
tokio-tungstenite = "0.18" # 基于tokio的异步websocket库，当下能找到的比较合适的
deadpool-redis = { version = "0.11" } # redis 连接池
futures-util = "0.3" # 异步扩展trait
serde = { version = "1.0", features = ["derive", "rc"] } # 最流行的序列化反序列化库
serde_json = "1.0" # 最流行的json序列化反序列化库
urlencoding = "2.1" # url编解码库
dashmap = "5.4" # 极其快速的并发读写hashmap
appconfig = { version = "1.0", git = "https://gitee.com/kivensoft/appconfig_rs.git" } # 支持命令行参数解析和配置文件参数解析的库
ansicolor = { version = "1.0", git = "https://gitee.com/kivensoft/ansicolor_rs.git" } # 支持终端ansi颜色的库
asynclog = { version = "1.0", git = "https://gitee.com/kivensoft/asynclog_rs.git" } # 支持同步和异步两种方式的迷你日志实现库
