[package]
name = "appconfig"
version = "1.0.0"
edition = "2021"
authors = ["kiven <kivensoft@gmail.com>"]
description = "A simple Unix style command line parameter and configuration file parsing library"

[features]
default = ["cfg-file"]
cfg-file = []

[dependencies]
anyhow = "1.0"
rand = "0.8"
getopts = "0.2"
